--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,13 +35,13 @@
         android:theme="@style/Theme.AbcToGoMXB"
         tools:targetApi="31">
         <activity
-            android:name=".ui.intro.activity.IntroActivity"
+            android:name=".ui.auth.activity.IntroActivity"
             android:exported="false" />
         <activity
             android:name=".ui.home.activity.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.splash.activity.SplashActivity"
+            android:name=".ui.auth.activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
