--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,21 @@
         android:theme="@style/Theme.AbcToGoMXB"
         tools:targetApi="31">
         <activity
+            android:name=".ui.auth.activity.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.activity.SetNewPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.activity.VerificationCodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.activity.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.activity.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.auth.activity.IntroActivity"
             android:exported="false" />
         <activity
