--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,10 +31,13 @@
         android:theme="@style/Theme.AbcToGoMXB"
         tools:targetApi="31">
         <activity
+            android:name=".ui.auth.activity.ForgotPasswordOptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.auth.activity.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.auth.activity.SetNewPasswordActivity"
+            android:name=".ui.auth.activity.ResetPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.activity.VerificationCodeActivity"
@@ -90,7 +93,6 @@
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="${crashlyticsEnabled}" />
-
     </application>
 
 </manifest>
