Home Module UI Completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AbcToGoMXB"
+        android:theme="@style/Theme.BasalBody"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.home.activity.NotificationsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.home.activity.AddNewActivityActivity"
             android:exported="false" />
