--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -29,7 +29,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AbcToGoMXB"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.profile.activity.TroubleShootActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.profile.activity.ContactSupportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.profile.activity.ChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.profile.activity.EditProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.auth.activity.ChangePasswordActivity"
             android:exported="false" />
@@ -59,7 +71,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.auth.activity.SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -70,7 +82,7 @@
 
         <service
             android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
-            android:enabled="false" >
+            android:enabled="false">
             <meta-data
                 android:name="autoStoreLocales"
                 android:value="true" />
@@ -87,7 +99,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths" />
