Refactor bottom sheet dialogs and update UI components
Removed CommonBottomSheetDialog and related resources, replacing them with CommonConfirmationBottomSheetDialog and CommonSuccessBottomSheetDialog for improved modularity and clarity. Updated usages across activities and fragments, refactored WebViewActivity to profile package, and enhanced UI layouts for consistency, including phone number field support and improved padding. Deleted unused SettingRepository and SettingViewModel. Minor UI tweaks and resource renaming for better maintainability.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.setting.activity.WebViewActivity" />
+        <activity android:name=".ui.profile.activity.WebViewActivity" />
 
         <service
             android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
