--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ ui = "1.9.0"
 ksp = "2.2.10-2.0.2"
 view = "2.8.0"
 ccp = "2.7.3"
+mpandroidchart = "v3.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -75,6 +76,8 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 socket-io-client = { module = "io.socket:socket.io-client", version.ref = "socketIoClient" }
 calender-view = { module = "com.kizitonwose.calendar:view", version.ref = "view" }
 ccp-view = { module = "com.hbb20:ccp", version.ref = "ccp" }
+mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart", version.ref = "mpandroidchart" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
